# rant-v1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.cookiecutter_replay/: app_template.json
app/: settings.py  urls.py
common/: model_mixins.py
nginx/: default.conf
suggestions/: forms.py  managers.py  models.py  urls.py  views.py
suggestions/migrations/: 0001_initial.py
suggestions/templates/suggestions/: suggestion_form.html  suggestion_list.html
suggestions/tests/: test_views.py
templates/: base.html  home.html
theme/static_src/: tailwind.config.js
users/: forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  signup.html
users/tests/: test_models.py  test_views.py
